<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="action_settings">Settings</string>
    <string name="action_shuffle">Shuffle Songs</string>

    <string name="settingsTitle">App Settings</string>
    <string name="labelMaxListSize">Enter Max List Size</string>
    <string name="MaxListSize">Enter Max List Size</string>
    <string name="saveDetails">Save</string>
    <string name="cancelDetails">Cancel</string>

    <string name="song_title">Title</string>
    <string name="song_artist">Artist</string>
    <string name="song_image">Song Image</string>

    <string name="request_permissions">Request Permissions</string>
    <string name="permissions_please">Permission denied, boo!</string>

    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>

</resources>