<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/ll_MaxListSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMaxListSizeLabel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/etMaxListSize"
            android:text="@string/labelMaxListSize" />

        <EditText
            android:id="@+id/etMaxListSize"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/MaxListSize"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:autofillHints="Maximum List Size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_saveDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveDetails" />

        <Button
            android:id="@+id/btn_cancelDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelDetails" />
    </LinearLayout>
</LinearLayout>