<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_light"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/icons"
            android:foregroundGravity="center_vertical"
            android:src="@android:drawable/ic_media_play"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/song_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_horizontal"
                android:text="@string/song_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_artist"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>